[package]
name = "rustfs-disk-remote"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
rustfs-protos.workspace = true
futures.workspace = true
bytes.workspace = true
http.workspace = true
uuid.workspace = true
sha2.workspace = true
base64.workspace = true
time.workspace = true
url.workspace = true
hmac.workspace = true
urlencoding.workspace = true
async-trait.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
serde_json.workspace = true
rustfs-disk-core.workspace = true
rustfs-endpoints.workspace = true
rustfs-rio.workspace = true
rustfs-filemeta.workspace = true
rustfs-store-core.workspace = true


