# Copyright 2024 RustFS Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rustfs-erasure-coding"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
rustfs-disk-core.workspace=true
pin-project-lite.workspace = true
rustfs-utils = { workspace = true, features = ["hash"] }
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
bytes.workspace = true
futures.workspace = true
reed-solomon-simd.workspace = true 
smallvec.workspace = true 