# Copyright 2024 RustFS Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rustfs-store-core"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
time.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
rmp.workspace = true
tonic.workspace = true
http.workspace = true
bytes.workspace = true
byteorder.workspace = true
rustfs-rio.workspace = true
rustfs-filemeta.workspace = true
rustfs-disk-core.workspace = true
rustfs-store-disk.workspace = true
futures.workspace = true
rustfs-madmin.workspace = true
rustfs-utils = {workspace = true, features=["path","s3s","string"]}
s3s.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
rustfs-endpoints.workspace = true
lazy_static.workspace = true
async-trait.workspace=true
rustfs-policy.workspace = true


